--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
         </ul>
     </nav>
 
-    <img src="images/IMG_6091.JPG" id="hjemleander">
+    <div class="infoBox">
+        <h2>Leander</h2>
+        <br>
+        <img src="images/IMG_6091.JPG">
+        <br>
+        <h4>
+            <ul>
+                <li>16 år gammal</li>
+                <li>Like dataspill</li>
+                <li>Like pizza</li>
+            </ul>
+        </h4>
+    </div>
 
 </body>
 </html>
