--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
+
 <body>
 
     <nav>
@@ -28,10 +30,11 @@
             <ul>
                 <li>16 år gammal</li>
                 <li>Like dataspill</li>
-                <li>Like pizza</li>
+                <li>Like katter</li>
             </ul>
         </h4>
     </div>
 
 </body>
+
 </html>
