ive done some things(saft)

--- a/fag.html
+++ b/fag.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="css/fag.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
+
 <body>
 
     <nav>
@@ -21,21 +23,26 @@
 
     <div class="subjectContainer">
         <div class="subjectBox">
+            <img src="images/Teknologiforståelse.png" id="bilder">
             <h3>Teknologifortåing</h3>
-            <br>
-            <img src="images/Teknologiforståing.png">
         </div>
-        <div class="subjectBox" id="middlebox">
+        <div class="subjectBox" id="bilder">
+            <img src="images/koding.png">
             <h3>Konseptutvikling og programmering</h3>
-            <br>
-            <img src="images/Programmering.png">
         </div>
         <div class="subjectBox">
+            <img src="images/Kommunikasjon.png" id="bilder">
             <h3>Produksjon og historiefortelling</h3>
-            <br>
-            <img src="images/Kommunikasjon.png">
         </div>
     </div>
 
+    <footer>
+        <p>Author: Leander Rivenes Vihovde</p>
+        <p>
+            <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
+        </p>
+    </footer>
+
 </body>
+
 </html>
