--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
+
 <body>
 
     <nav>
@@ -19,5 +21,17 @@
         </ul>
     </nav>
 
+    <div class="kontakt">
+        <h3>Viss du trenger å ta kontakt med meg, send mail til <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>.</h3>
+    </div>
+
+    <footer>
+        <p>Author: Leander Rivenes Vihovde</p>
+        <p>
+            <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
+        </p>
+    </footer>
+
 </body>
+
 </html>
