--- a/om-meg.html
+++ b/om-meg.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
+
 <body>
 
     <nav>
@@ -19,5 +21,27 @@
         </ul>
     </nav>
 
+    <div class="infoBox">
+        <h2>Leander</h2>
+        <br>
+        <img src="images/IMG_6091.JPG">
+        <br>
+        <h4>
+            <ul>
+                <li>16 år gammal</li>
+                <li>Like dataspill</li>
+                <li>Like katter</li>
+            </ul>
+        </h4>
+    </div>
+
+    <footer>
+        <p>Author: Leander Rivenes Vihovde</p>
+        <p>
+            <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
+        </p>
+    </footer>
+
 </body>
+
 </html>
