--- a/index.html
+++ b/index.html
@@ -21,19 +21,12 @@
         </ul>
     </nav>
 
-    <div class="infoBox">
-        <h2>Leander</h2>
-        <br>
-        <img src="images/IMG_6091.JPG">
-        <br>
-        <h4>
-            <ul>
-                <li>16 år gammal</li>
-                <li>Like dataspill</li>
-                <li>Like katter</li>
-            </ul>
-        </h4>
-    </div>
+    <footer>
+        <p>Author: Leander Rivenes Vihovde</p>
+        <p>
+            <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
+        </p>
+    </footer>
 
 </body>
 
