--- a/fag.html
+++ b/fag.html
@@ -36,6 +36,12 @@
         </div>
     </div>
 
+    <div>
+        <video width="auto" height="500px" controls="controls">
+        <source src="videos/lys.mp4" type="video/mp4">
+        </video>
+    </div>
+
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
         <p>
