--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -14,14 +14,14 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="fag.html">Fag</a></li>
-            <li><a class="active" href="om-meg.html">Om Meg</a></li>
+            <li><a href="index.html">Heim</a></li>
+            <li><a class="active" href="fag.html">Fag</a></li>
+            <li><a href="om-meg.html">Om Meg</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
 
-
+    
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
