--- a/index.html
+++ b/index.html
@@ -14,12 +14,26 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
-            <li><a class="active" href="index.html">Hjem</a></li>
+            <li><a class="active" href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
             <li><a href="om-meg.html">Om Meg</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
+
+    <div class="infoBox">
+        <h2 id="leander">Leander</h2>
+        <br>
+        <img src="images/IMG_6091.JPG">
+        <br>
+        <h4>
+            <ul>
+                <li>Er 16 År Gammal</li>
+                <li>Liker Katter</li>
+                <li>Liker Dataspel</li>
+            </ul>
+        </h4>
+    </div>
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
