--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/fag.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
 
@@ -21,7 +21,9 @@
         </ul>
     </nav>
 
-    
+    <div class="button">
+        <a href="https://github.com/Leander64"> GITHUB </a>
+    </div>
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
