--- a/fag.html
+++ b/fag.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/fag.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
 
@@ -24,22 +24,22 @@
     <div class="subjectContainer">
         <div class="subjectBox">
             <img src="images/Teknologiforståelse.png" id="bilder">
-            <h3>Teknologifortåing</h3>
+            <div class="button">
+                <a href="tekforståing.html">Teknologiforståing</a>
+            </div>
         </div>
         <div class="subjectBox" id="bilder">
             <img src="images/koding.png">
-            <h3>Konseptutvikling og programmering</h3>
+            <div class="button">
+                <a href="konsogprogr.html">Konseptutvikling og Programmering</a>
+            </div>
         </div>
         <div class="subjectBox">
             <img src="images/Kommunikasjon.png" id="bilder">
-            <h3>Produksjon og historiefortelling</h3>
+            <div class="button">
+                <a href="prodoghistorie.html">Produksjon og Historeforteljing</a>
+            </div>
         </div>
-    </div>
-
-    <div>
-        <video width="auto" height="500px" controls="controls">
-        <source src="videos/lys.mp4" type="video/mp4">
-        </video>
     </div>
 
     <footer>
