--- a/api.html
+++ b/api.html
@@ -39,7 +39,7 @@
 <body>
     <div class="katt">
         <h1>Tilfeldige kattebilder</h1>
-        <script src="index.js"></script>
+        <script src="api.js"></script>
         <img id="catimage" alt="Cat Image">
     </div>
     <div class="button">
