--- a/fag.html
+++ b/fag.html
@@ -9,7 +9,7 @@
     <title>Min Portefølje</title>
 </head>
 
-<body>
+<body background="images/cool-background.png">
 
     <nav>
         <label class="logo">Min Portefølje</label>
@@ -25,19 +25,19 @@
         <div class="subjectBox">
             <img src="images/Teknologiforståelse.png" id="bilder">
             <div class="button">
-                <a href="tekforståing.html">Teknologiforståing</a>
+                <a href="tekforståing.html">Klikk her</a>
             </div>
         </div>
         <div class="subjectBox" id="bilder">
             <img src="images/koding.png">
             <div class="button">
-                <a href="konsogprogr.html">Konseptutvikling og Programmering</a>
+                <a href="konsogprogr.html">Klikk her</a>
             </div>
         </div>
         <div class="subjectBox">
             <img src="images/Kommunikasjon.png" id="bilder">
             <div class="button">
-                <a href="prodoghistorie.html">Produksjon og Historeforteljing</a>
+                <a href="prodoghistorie.html">Klikk her</a>
             </div>
         </div>
     </div>
