--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Min Portefølje</title>
 </head>
 
-<body>
+<body background="images/cool-background.png">
 
     <nav>
         <label class="logo">Min Portefølje</label>
