--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -9,7 +9,7 @@
     <title>Min Portefølje</title>
 </head>
 
-<body>
+<body background="images/cool-background.png">
 
     <nav>
         <label class="logo">Min Portefølje</label>
@@ -21,8 +21,15 @@
         </ul>
     </nav>
 
-    <div class="button">
-        <a href="https://github.com/Leander64"> GITHUB </a>
+    <h1>Konseptutvikling og Programmering</h1>
+
+    <div class="konsogprogr">
+        <div class="button">
+            <a href="https://github.com/Leander64"> GITHUB </a>
+        </div>
+        <div class="button">
+            <a href="klokke.html"> Klokke </a>
+        </div>
     </div>
 
     <footer>
