--- a/om-meg.html
+++ b/om-meg.html
@@ -9,20 +9,25 @@
     <title>Min Portefølje</title>
 </head>
 
-<body>
+<body background="images/cool-background.png">
 
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
-            <li><a href="index.html">Hjem</a></li>
+            <li><a href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
             <li><a class="active" href="om-meg.html">Om Meg</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
 
-    <div>
-        
+    <div class="ommeg">
+        <h3>Litt om meg</h3>
+        <br>
+        <p>Eg heiter Leander og er 16 år gammal. Eg går på Stord Videregåande skule på Informasjonsteknologi og Medieproduksjons-linja.
+            På fritida liker eg å spele dataspel og sykle. Eg har 3 katter, Puse, Purre og Pepsi.
+        </p>
+        <img src="images/tårn.png">
     </div>
 
     <footer>
