--- a/prodoghistorie.html
+++ b/prodoghistorie.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/fag.css" rel="stylesheet">
     <title>Min Portefølje</title>
 </head>
 
-<body>
+<body background="images/cool-background.png">
 
     <nav>
         <label class="logo">Min Portefølje</label>
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 
-    
+    <h1>Produksjon og historieforteljing</h1>
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
