--- a/kontakt.html
+++ b/kontakt.html
@@ -9,12 +9,12 @@
     <title>Min Portefølje</title>
 </head>
 
-<body>
+<body background="images/cool-background.png">
 
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
-            <li><a href="index.html">Hjem</a></li>
+            <li><a href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
             <li><a href="om-meg.html">Om Meg</a></li>
             <li><a class="active" href="kontakt.html">Kontakt</a></li>
