--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -21,9 +21,13 @@
         </ul>
     </nav>
 
+    <div class="tilbake">
+        <a href="fag.html"> ← Tilbake </a>
+    </div>
+    
     <h1>Konseptutvikling og Programmering</h1>
 
-    <div class="konsogprogr">
+    <div class="sigmaknapper">
         <div class="button">
             <a href="https://github.com/Leander64"> GITHUB </a>
         </div>
