--- a/prodoghistorie.html
+++ b/prodoghistorie.html
@@ -21,7 +21,18 @@
         </ul>
     </nav>
 
+    <div class="tilbake">
+        <a href="fag.html"> ← Tilbake </a>
+    </div>
+    
     <h1>Produksjon og historieforteljing</h1>
+
+    <div class="prodhistContainer">
+        <div class="prodhistBox">
+            <h3>Bokomslag</h3>
+            <img src="images/bokomslag.png" alt="meg" class="center" id="bokomslag">
+        </div> 
+    </div>
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
