--- a/tekforståing.html
+++ b/tekforståing.html
@@ -21,6 +21,10 @@
         </ul>
     </nav>
 
+    <div class="tilbake">
+        <a href="fag.html"> ← Tilbake </a>
+    </div>
+    
     <h1>Teknologiforståing</h1>
 
     <footer>
