--- a/prodoghistorie.html
+++ b/prodoghistorie.html
@@ -26,13 +26,24 @@
     </div>
     
     <h1>Produksjon og historieforteljing</h1>
+    <h2>Trykk på bileta for å opne pdf</h2>
 
     <div class="prodhistContainer">
         <div class="prodhistBox">
             <h3>Bokomslag</h3>
-            <img src="images/bokomslag.png" alt="meg" class="center" id="bokomslag">
+            <a href="pdf/bokomslag2.pdf">
+            <img src="images/bokomslag.png" alt="Bokomslag" class="center" id="bokomslag">
+            </a>
         </div> 
+
+        <div class="prodhistBox">
+            <h3>IM-lan logo</h3>
+            <a href="pdf/lanlogo.pdf">
+            <img src="images/lanlogo-1.png" alt="IM-lan logo" class="center" id="imlanlogo">
+            </a>
+        </div>
     </div>
+
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
