--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -34,6 +34,9 @@
         <div class="button">
             <a href="klokke.html"> Klokke </a>
         </div>
+        <div class="button">
+            <a href="julekort/julekort.html"> Julekort </a>
+        </div>
     </div>
 
     <footer>
