--- a/katte-api/katte-api.html
+++ b/katte-api/katte-api.html
@@ -39,12 +39,13 @@
 <body>
     <div class="katt">
         <h1>Tilfeldige kattebilder</h1>
-        <script src="api.js"></script>
+        
         <img id="catimage" alt="Cat Image">
     </div>
     <div class="button">
         <button onclick="newImage()">Ny Katt</button>
     </div>
+    <script src="katte-api.js"></script>
 </body>
 
 </html>
