--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -37,6 +37,12 @@
         <div class="button">
             <a href="julekort/julekort.html"> Julekort </a>
         </div>
+        <div class="button">
+            <a href="katte-api/katte-api.html"> Katte-API </a>
+        </div>
+        <div class="button">
+            <a href="lykkehjul/lykkehjul.html"> Lykkehjul </a>
+        </div>
     </div>
 
     <footer>
