--- a/prodoghistorie.html
+++ b/prodoghistorie.html
@@ -63,6 +63,13 @@
             <img src="images/Profilmanual-1.png" alt="Profilmanual" class="center" id="profilmanual">
             </a>
         </div>
+
+        <div class="prodhistBox">
+            <h3>Logo til pizzarestaurant</h3>
+            <a href="pdf/PIZZALOGO.pdf">
+            <img src="images/PIZZALOGO-1.png" alt="Pizza-logo" class="center" id="pizzalogo">
+            </a>
+        </div>
     </div>
 
 
