--- a/tekforståing.html
+++ b/tekforståing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href="css/fag.css" rel="stylesheet">
-    <title>Min Portefølje</title>
+    <title>Teknologiforståing</title>
 </head>
 
 <body background="images/cool-background.png">
@@ -26,6 +26,36 @@
     </div>
     
     <h1>Teknologiforståing</h1>
+    <h2>Trykk på bileta for å forstørre dei</h2>
+
+    <div class="teknologiContainer">
+        <div class="teknologiBox">
+            <h3>Arduino, lys</h3>
+            <video controls="controls" src="videos/lys.mp4" alt="Arduino, lys" class="center" id="arduinolys"></video>
+        </div>
+
+        <div class="teknologiBox">
+            <h3>Basisnett i Cisco Packet Tracer</h3>
+            <a href="images/basisnett.png">
+            <img src="images/basisnett.png" alt="Basisnett" class="center" id="basisnett">
+            </a>
+        </div>
+
+        <div class="teknologiBox">
+            <h3>Heimenettverk(Trykk på bilete for å sjå heile dokumentet)</h3>
+            <a href="pdf/Heimenettverk.pdf">
+                <img src="images/Heimenettverk.png" alt="Heimenettverk" class="center" id="heimenettverk">
+            </a>
+        </div>
+
+        <div class="teknologiBox">
+            <h3>Delar til datamaskin</h3>
+            <a href="images/datamaskin.png">
+            <img src="images/datamaskin.png" alt="Delar til datamaskin" class="center" id="datamaskin">
+            </a>
+        </div>
+    </div>
+
 
     <footer>
         <p>Author: Leander Rivenes Vihovde</p>
