--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href="css/fag.css" rel="stylesheet">
-    <title>Min Portefølje</title>
+    <title>Konseptutvikling og Programmering</title>
 </head>
 
 <body background="images/cool-background.png">
