--- a/tekforståing.html
+++ b/tekforståing.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="teknologiBox">
-            <h3>Heimenettverk(Trykk på bilete for å sjå heile dokumentet)</h3>
+            <h3>Heimenettverk</h3>
             <a href="pdf/Heimenettverk.pdf">
                 <img src="images/Heimenettverk.png" alt="Heimenettverk" class="center" id="heimenettverk">
             </a>
