--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="https://www.1001fonts.com/digital-7-font.html">
     <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje - Heim</title>
 </head>
@@ -14,13 +15,18 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
+            <li>
+                <div class="tid">
+                    <p id="time"></p>
+                </div>
+            </li>
             <li><a class="active" href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
             <li><a href="om-meg.html">Om Meg</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
-
+c
     <div class="infoBox">
         <h2 id="leander">Leander</h2>
         <br>
@@ -41,7 +47,7 @@
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
     </footer>
-
+    <script src="/js/tid.js"></script>
 </body>
 
 </html>
