--- a/kontakt.html
+++ b/kontakt.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="https://www.1001fonts.com/digital-7-font.html">
     <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje - Kontakt</title>
 </head>
@@ -14,24 +15,30 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
+            <li>
+                <div class="tid">
+                    <p id="time"></p>
+                </div>
+            </li>
             <li><a href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
-            <li><a href="om-meg.html">Om Meg</a></li>
+            <li><a href="https://github.com/Leander64">Github</a></li>
             <li><a class="active" href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
 
     <div class="kontakt">
-        <h3>Viss du trenger å ta kontakt med meg, send mail til <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>.</h3>
+        <h3>Viss du trenger å ta kontakt med meg, send mail til <a
+                href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>.</h3>
     </div>
 
     <footer>
-        <p>Author: Leander Rivenes Vihovde</p>
+        <p>Author: Leander R. Vihovde</p>
         <p>
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
     </footer>
-
+    <script src="/js/tid.js"></script>
 </body>
 
 </html>
