--- a/om-meg.html
+++ b/om-meg.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="https://www.1001fonts.com/digital-7-font.html">
     <link href="css/main.css" rel="stylesheet">
     <title>Min Portefølje - Om Meg</title>
 </head>
@@ -14,6 +15,11 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
+            <li>
+                <div class="tid">
+                    <p id="time"></p>
+                </div>
+            </li>
             <li><a href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
             <li><a class="active" href="om-meg.html">Om Meg</a></li>
@@ -22,16 +28,16 @@
     </nav>
 
     <div class="ommeg">
-        
+
     </div>
 
     <footer>
-        <p>Author: Leander Rivenes Vihovde</p>
+        <p>Author: Leander R. Vihovde</p>
         <p>
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
     </footer>
-
+    <script src="/js/tid.js"></script>
 </body>
 
 </html>
