--- a/index.html
+++ b/index.html
@@ -22,27 +22,23 @@
             </li>
             <li><a class="active" href="index.html">Heim</a></li>
             <li><a href="fag.html">Fag</a></li>
-            <li><a href="om-meg.html">Om Meg</a></li>
+            <li><a href="https://github.com/Leander64">Github</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
-c
+
     <div class="infoBox">
         <h2 id="leander">Leander</h2>
         <br>
         <img src="images/IMG_6091.JPG">
         <br>
-        <h4>
-            <ul>
-                <li>Er 16 År Gammal</li>
-                <li>Liker Katter</li>
-                <li>Liker Dataspel</li>
-            </ul>
-        </h4>
+        <h2>
+            Eg heiter Leander og er 17 år gammal. Eg bur i Valevåg og går på Stord Videregåande skule.
+        </h2>
     </div>
 
     <footer>
-        <p>Author: Leander Rivenes Vihovde</p>
+        <p>Author: Leander R. Vihovde</p>
         <p>
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
