--- a/konsogprogr.html
+++ b/konsogprogr.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="https://www.1001fonts.com/digital-7-font.html">
     <link href="css/fag.css" rel="stylesheet">
     <title>Konseptutvikling og Programmering</title>
 </head>
@@ -14,9 +15,14 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
+            <li>
+                <div class="tid">
+                    <p id="time"></p>
+                </div>
+            </li>
             <li><a href="index.html">Heim</a></li>
             <li><a class="active" href="fag.html">Fag</a></li>
-            <li><a href="om-meg.html">Om Meg</a></li>
+            <li><a href="https://github.com/Leander64">Github</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
@@ -24,7 +30,7 @@
     <div class="tilbake">
         <a href="fag.html"> ← Tilbake </a>
     </div>
-    
+
     <h1>Konseptutvikling og Programmering</h1>
 
     <div class="sigmaknapper">
@@ -46,12 +52,12 @@
     </div>
 
     <footer>
-        <p>Author: Leander Rivenes Vihovde</p>
+        <p>Author: Leander R. Vihovde</p>
         <p>
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
     </footer>
-
+    <script src="/js/tid.js"></script>
 </body>
 
 </html>
