--- a/prodoghistorie.html
+++ b/prodoghistorie.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="https://www.1001fonts.com/digital-7-font.html">
     <link href="css/fag.css" rel="stylesheet">
     <title>Produksjon og historieforteljing</title>
 </head>
@@ -14,9 +15,14 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
+            <li>
+                <div class="tid">
+                    <p id="time"></p>
+                </div>
+            </li>
             <li><a href="index.html">Heim</a></li>
             <li><a class="active" href="fag.html">Fag</a></li>
-            <li><a href="om-meg.html">Om Meg</a></li>
+            <li><a href="https://github.com/Leander64">Github</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
@@ -24,7 +30,7 @@
     <div class="tilbake">
         <a href="fag.html"> ← Tilbake </a>
     </div>
-    
+
     <h1>Produksjon og historieforteljing</h1>
     <h2>Trykk på bileta for å opne pdf</h2>
 
@@ -32,54 +38,54 @@
         <div class="prodhistBox">
             <h3>Bokomslag</h3>
             <a href="pdf/bokomslag2.pdf">
-            <img src="images/bokomslag.png" alt="Bokomslag" class="center" id="bokomslag">
+                <img src="images/bokomslag.png" alt="Bokomslag" class="center" id="bokomslag">
             </a>
-        </div> 
+        </div>
 
         <div class="prodhistBox">
             <h3>IM-lan logo</h3>
             <a href="pdf/lanlogo.pdf">
-            <img src="images/lanlogo-1.png" alt="IM-lan logo" class="center" id="imlanlogo">
+                <img src="images/lanlogo-1.png" alt="IM-lan logo" class="center" id="imlanlogo">
             </a>
         </div>
 
         <div class="prodhistBox">
             <h3>Visittkort framside</h3>
             <a href="pdf/monogram2.pdf">
-            <img src="images/monogram2-1.png" alt="Visittkort framside" class="center" id="visittkort">
+                <img src="images/monogram2-1.png" alt="Visittkort framside" class="center" id="visittkort">
             </a>
         </div>
-        
+
         <div class="prodhistBox">
             <h3>Visittkort bakside</h3>
             <a href="pdf/monogram2.pdf">
-            <img src="images/monogram2-2.png" alt="Visittkort bakside" class="center" id="visittkort">
+                <img src="images/monogram2-2.png" alt="Visittkort bakside" class="center" id="visittkort">
             </a>
         </div>
 
         <div class="prodhistBox">
             <h3>Profilmanual til visittkort</h3>
             <a href="pdf/Profilmanual.pdf">
-            <img src="images/Profilmanual-1.png" alt="Profilmanual" class="center" id="profilmanual">
+                <img src="images/Profilmanual-1.png" alt="Profilmanual" class="center" id="profilmanual">
             </a>
         </div>
 
         <div class="prodhistBox">
             <h3>Logo til pizzarestaurant</h3>
             <a href="pdf/PIZZALOGO.pdf">
-            <img src="images/PIZZALOGO-1.png" alt="Pizza-logo" class="center" id="pizzalogo">
+                <img src="images/PIZZALOGO-1.png" alt="Pizza-logo" class="center" id="pizzalogo">
             </a>
         </div>
     </div>
 
 
     <footer>
-        <p>Author: Leander Rivenes Vihovde</p>
+        <p>Author: Leander R. Vihovde</p>
         <p>
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
     </footer>
-
+    <script src="/js/tid.js"></script>
 </body>
 
 </html>
