--- a/tekforståing.html
+++ b/tekforståing.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="https://www.1001fonts.com/digital-7-font.html">
     <link href="css/fag.css" rel="stylesheet">
     <title>Teknologiforståing</title>
 </head>
@@ -14,9 +15,14 @@
     <nav>
         <label class="logo">Min Portefølje</label>
         <ul>
+            <li>
+                <div class="tid">
+                    <p id="time"></p>
+                </div>
+            </li>
             <li><a href="index.html">Heim</a></li>
             <li><a class="active" href="fag.html">Fag</a></li>
-            <li><a href="om-meg.html">Om Meg</a></li>
+            <li><a href="https://github.com/Leander64">Github</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
@@ -24,7 +30,7 @@
     <div class="tilbake">
         <a href="fag.html"> ← Tilbake </a>
     </div>
-    
+
     <h1>Teknologiforståing</h1>
     <h2>Trykk på bileta for å forstørre dei</h2>
 
@@ -37,7 +43,7 @@
         <div class="teknologiBox">
             <h3>Basisnett i Cisco Packet Tracer</h3>
             <a href="images/basisnett.png">
-            <img src="images/basisnett.png" alt="Basisnett" class="center" id="basisnett">
+                <img src="images/basisnett.png" alt="Basisnett" class="center" id="basisnett">
             </a>
         </div>
 
@@ -51,19 +57,19 @@
         <div class="teknologiBox">
             <h3>Delar til datamaskin</h3>
             <a href="images/datamaskin.png">
-            <img src="images/datamaskin.png" alt="Delar til datamaskin" class="center" id="datamaskin">
+                <img src="images/datamaskin.png" alt="Delar til datamaskin" class="center" id="datamaskin">
             </a>
         </div>
     </div>
 
 
     <footer>
-        <p>Author: Leander Rivenes Vihovde</p>
+        <p>Author: Leander R. Vihovde</p>
         <p>
             <a href="mailto:e-leavih@iskule.no">e-leavih@iskule.no</a>
         </p>
     </footer>
-
+    <script src="/js/tid.js"></script>
 </body>
 
 </html>
