--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </div>
             </li>
             <li><a class="active" href="index.html">Heim</a></li>
+            <li><a href="jul.html">Jul</a></li>
             <li><a href="fag.html">Fag</a></li>
             <li><a href="https://github.com/Leander64">Github</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
@@ -46,4 +47,4 @@
     <script src="/js/tid.js"></script>
 </body>
 
-</html>
+</html>     
