--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="images/IMG_6091.JPG">
         <br>
         <h2>
-            Eg heiter Leander og er 17 år gammal. Eg bur i Valevåg og går på Stord Videregåande skule.
+            Eg heiter Leander og er 17 år gammal. Eg bur i Valestrand og går på Stord Videregåande skule.
         </h2>
     </div>
 
